pyinterp/pyinterp/pyinterp/tests/must_pass/scope/errors/misplaced_nonlocal3.py
def g():
    def f():
        nonlocal x
        return x
x = 1
g()